--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
 server.port=8081
+spring.mvc.pathmatch.mathching-strategy=ant-path-matcher
